# student-grading-system

./: .gitignore  CMakeLists.txt  README.md  all.txt  courselist.txt  coursestudents.txt  courseteachers.txt  entities.cc  entities.h  entitiesTest.cc  junctionDB.txt  reportcard.txt  studentRegDB.txt  studentcourses.txt  studentlist.txt  teachercourses.txt  teacherlist.txt  terminalMenu.cc
